// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconCopy should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-copy "
  height={14}
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    d="M1 11a1 1 0 0 1-1-1V1a1 1 0 0 1 1-1h9a1 1 0 0 1 0 2H2v8a1 1 0 0 1-1 1z"
    fill="#999"
  />
  <path
    className="fill-color"
    d="M13 3H3v10a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zm-3 8H7a1 1 0 0 1 0-2h3a1 1 0 0 1 0 2zm0-3H7a1 1 0 0 1 0-2h3a1 1 0 0 1 0 2z"
    fill="#999"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconCopy should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="icon-copy test"
  height={100}
  title="title"
  viewBox="0 0 14 14"
  width={200}
>
  <path
    className="fill-color"
    d="M1 11a1 1 0 0 1-1-1V1a1 1 0 0 1 1-1h9a1 1 0 0 1 0 2H2v8a1 1 0 0 1-1 1z"
    fill="green"
  />
  <path
    className="fill-color"
    d="M13 3H3v10a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zm-3 8H7a1 1 0 0 1 0-2h3a1 1 0 0 1 0 2zm0-3H7a1 1 0 0 1 0-2h3a1 1 0 0 1 0 2z"
    fill="green"
  />
</AccessibleSVG>
`;
